src/AddyScript/Parsers/Parser.cs
using System.Collections.Generic;
using System.Linq;

using AddyScript.Ast;
using AddyScript.Ast.Expressions;
using AddyScript.Ast.Statements;
using AddyScript.Properties;
using AddyScript.Runtime.DataItems;
using AddyScript.Runtime.OOP;


namespace AddyScript.Parsers;


/// <summary>
/// The AddyScript full-featured parser.
/// </summary>
/// <remarks>
/// Initializes a new instance of the parser.
/// </remarks>
/// <param name="lexer">The bound lexer</param>
public class Parser(Lexer lexer) : ExpressionParser(lexer)
{
    public const string PROPERTY_READER_START = "read";
    public const string PROPERTY_WRITER_START = "write";

    /// <summary>
    /// Recognizes an entire script.
    /// </summary>
    /// <returns>A <see cref="Ast.Program"/></returns>
    public Program Program()
    {
        Statement[] statements = Asterisk(StatementWithLabels);
        Match(TokenID.EndOfFile);

        var labels = CurrentFunction.CurrentBlock.ConvertLabels(statements);
        var program = new Program(FileName, statements) {Labels = labels};
        if (statements.Length > 0) program.SetLocation(statements[0].Start, statements[^1].End);

        return program;
    }

    /// <summary>
    /// Recognizes a non-null statement.
    /// </summary>
    /// <returns>An <see cref="Ast.Statements.Statement"/></returns>
    public Statement RequiredStatement()
    {
        return Required(Statement, Resources.StatementRequired);
    }

    /// <summary>
    /// Recognizes a statement eventually preceded by labels.
    /// </summary>
    /// <returns>A <see cref="Ast.Statements.Statement"/></returns>
    private Statement StatementWithLabels()
    {
        while (TryMatch(TokenID.Identifier) && LookAhead(TokenID.Colon, out int k))
        {
            var label = new ParseTimeLabel(token.ToString(), token.Start, Ll(k).End);
            CurrentFunction.CurrentBlock.Labels.Add(label);
            Consume(k);
        }

        return Statement();
    }

    /// <summary>
    /// Recognizes a statement.
    /// </summary>
    /// <returns>A <see cref="Ast.Statements.Statement"/></returns>
    private Statement Statement()
    {
        // Skip empty statements
        while (TryMatch(TokenID.SemiColon))
            Consume(1);

        return token.TokenID switch
        {
            TokenID.LeftBracket => StatementWithAttributes(),
            TokenID.KW_Import => Import(),
            TokenID.Modifier or TokenID.KW_Class => Class(),
            TokenID.KW_Record => Record(),
            TokenID.KW_Function => Function(),
            TokenID.KW_Extern => ExternalFunction(),
            TokenID.KW_Const => ConstantDecl(),
            TokenID.KW_Var => VariableDecl(),
            TokenID.KW_Let => AssignmentWithLet(),
            TokenID.LeftBrace => Block(),
            TokenID.KW_If => IfElse(),
            TokenID.KW_Switch => SwitchBlock(),
            TokenID.KW_For => ForLoop(),
            TokenID.KW_ForEach => ForEachLoop(),
            TokenID.KW_While => WhileLoop(),
            TokenID.KW_Do => DoLoop(),
            TokenID.KW_Continue => Continue(),
            TokenID.KW_Break => Break(),
            TokenID.KW_Goto => Goto(),
            TokenID.KW_Yield => Yield(),
            TokenID.KW_Return => Return(),
            TokenID.KW_Throw => Throw(),
            TokenID.KW_Try => TryCatchFinally(),
            _ => ExpressionAsStatement(),
        };
    }

    /// <summary>
    /// Recognizes a statement decorated with some attributes.
    /// </summary>
    /// <remarks>
    /// Most statements don't make usage of attributes.
    /// This is just a helpful way to attach additionnal informations to a statement.
    /// </remarks>
    /// <returns>An <see cref="Ast.Statements.StatementWithAttributes"/></returns>
    private StatementWithAttributes StatementWithAttributes()
    {
        Token first = Match(TokenID.LeftBracket);
        AttributeDecl[] attributes = List(Attribute, true, Resources.DuplicatedAttribute);
        Match(TokenID.RightBracket);

        SkipComments();

        StatementWithAttributes stmtWA = token.TokenID switch
        {
            TokenID.Modifier or TokenID.KW_Class => Class(),
            TokenID.KW_Record => Record(),
            TokenID.KW_Function => Function(),
            TokenID.KW_Extern => ExternalFunction(),
            _ => throw new SyntaxError(FileName, token, Resources.AttributesNotSupported),
        };

        stmtWA.Attributes = attributes;
        stmtWA.SetLocation(first.Start, stmtWA.End);
        return stmtWA;
    }

    /// <summary>
    /// Reconizes an expression when it's used as a statement.
    /// </summary>
    /// <returns>An <see cref="Expression"/></returns>
    private Expression ExpressionAsStatement()
    {
        Expression expr = Expression();

        if (expr != null)
        {
            Token last = Match(TokenID.SemiColon);
            expr.SetLocation(expr.Start, last.End);
        }

        return expr;
    }

    /// <summary>
    /// Recognizes an import directive.
    /// </summary>
    /// <returns>A reference to <see cref="ImportDirective"/></returns>
    private ImportDirective Import()
    {
        Token first = Match(TokenID.KW_Import), last = first;
        QualifiedName moduleName = QualifiedName(ref first, ref last);

        string alias = null;
        if (TryMatch(TokenID.KW_As))
        {
            Consume(1);
            alias = Match(TokenID.Identifier).ToString();
        }

        last = Match(TokenID.SemiColon);

        var import = new ImportDirective(moduleName, alias);
        import.SetLocation(first.Start, last.End);
        return import;
    }

    /// <summary>
    /// Recognizes a class definition.
    /// </summary>
    /// <returns>A <see cref="ClassDefinition"/></returns>
    private ClassDefinition Class()
    {
        Token first = null, last;

        Modifier modifier = Modifier.Default;
        if (TryMatch(TokenID.Modifier))
        {
            first = token;
            modifier = (Modifier)first.Value;
            Consume(1);
        }

        last = Match(TokenID.KW_Class);
        first ??= last;

        string className = Match(TokenID.Identifier).ToString();

        string superClassName = null;
        if (TryMatch(TokenID.Colon))
        {
            if (modifier == Modifier.Static)
                throw new SyntaxError(FileName, token, Resources.StaticClassHasNoSuperClass);

            Consume(1);
            superClassName = Match(TokenID.Identifier).ToString();
        }

        Match(TokenID.LeftBrace);
        PushClass(modifier, className, superClassName);
        var (constructor, indexer, fields, properties, methods, events) =
            IdentifiyClassMembers(modifier, Asterisk(ClassMember));
        PopClass();
        last = Match(TokenID.RightBrace);

        var classDef = new ClassDefinition(className, superClassName, modifier, constructor, indexer,
                                           [..fields], [..properties], [..methods], [..events]);
        classDef.SetLocation(first.Start, last.End);
        return classDef;
    }

    /// <summary>
    /// Recognizes a record class definition.
    /// </summary>
    /// <returns>A <see cref="ClassDefinition"/></returns>
    private ClassDefinition Record()
    {
        const Modifier modifier = Modifier.Final;

        Token first = Match(TokenID.KW_Record), last;
        string className = Match(TokenID.Identifier).ToString();
        ParameterDecl[] parameters = ParameterList();
        ClassMemberDecl[] additionalMembers = [];

        if (TryMatch(TokenID.LeftBrace))
        {
            Consume(1); // To skip the left brace
            PushClass(modifier, className, null);
            additionalMembers = Asterisk(ClassMember);
            PopClass();
            last = Match(TokenID.RightBrace);
        }
        else
            last = Match(TokenID.SemiColon);

        PushClass(modifier, className, null);
        var (otherCtor, indexer, additionalFields, additionalProps, methods, events) =
            IdentifiyClassMembers(modifier, additionalMembers);
        PopClass();

        if (otherCtor != null)
            throw new ScriptError(FileName, otherCtor, Resources.RecordCannotDefineConstructor);

        var (constructor, fields, properties) = BuildRecordClassMembers(className, parameters);
        var classDef = new ClassDefinition(className, Runtime.OOP.Class.Record.Name, modifier, constructor, indexer,
                                           [..fields, ..additionalFields], [..properties, ..additionalProps], [..methods], [..events]);
        classDef.SetLocation(first.Start, last.End);
        return classDef;
    }

    /// <summary>
    /// Recognizes a function's declaration.
    /// </summary>
    /// <returns>A <see cref="FunctionDecl"/></returns>
    private FunctionDecl Function()
    {
        Token first = Match(TokenID.KW_Function);
        string name = Match(TokenID.Identifier).ToString();
        ParameterDecl[] parameters = ParameterList();
        Block body = FunctionBody(name, false, false, false);

        var fnDecl = new FunctionDecl(name, parameters, body);
        fnDecl.SetLocation(first.Start, body.End);
        return fnDecl;
    }

    /// <summary>
    /// Recognizes an inline function's declaration.
    /// </summary>
    /// <returns>An <see cref="Ast.Expressions.InlineFunction"/></returns>
    protected override InlineFunction InlineFunction()
    {
        Token first = Match(TokenID.KW_Function);
        ParameterDecl[] parameters = ParameterList();
        Block body = FunctionBody(null, true, CurrentFunction.IsMethod, CurrentFunction.IsStatic);

        var inlineFn = new InlineFunction(parameters, body);
        inlineFn.SetLocation(first.Start, body.End);
        return inlineFn;
    }

    /// <summary>
    /// Recognizes a lambda expression or a lambda statement.
    /// </summary>
    /// <returns>An <see cref="Ast.Expressions.InlineFunction"/></returns>
    protected override InlineFunction Lambda()
    {
        Token first = Match(TokenID.VerticalBar);
        ParameterDecl[] parameters = List(Parameter, true, Resources.DuplicatedParameter);
        Match(TokenID.VerticalBar);
        Match(TokenID.Arrow);

        PushFunction(null, CurrentFunction.IsMethod, false, CurrentFunction.IsStatic);

        Block body;
        if (TryMatch(TokenID.LeftBrace))
            body = BlockBody();
        else
        {
            var returned = RequiredExpression();
            body = Ast.Statements.Block.WithReturn(returned);
            body.CopyLocation(returned);
        }

        PopFunction();

        var lambda = new InlineFunction(parameters, body);
        lambda.SetLocation(first.Start, body.End);
        return lambda;
    }

    /// <summary>
    /// Recognizes the expression returned by a <see cref="MatchCase"/>.
    /// </summary>
    /// <returns>An <see cref="Expression"/></returns>
    protected override Expression MatchCaseExpression() =>
        TryMatch(TokenID.LeftBrace)
            ? new BlockAsExpression(Block(true))
            : base.MatchCaseExpression();

    /// <summary>
    /// Recognizes an external function's declaration.
    /// </summary>
    /// <returns>An <see cref="ExternalFunctionDecl"/></returns>
    private ExternalFunctionDecl ExternalFunction()
    {
        Token first = Match(TokenID.KW_Extern);
        Match(TokenID.KW_Function);
        string name = Match(TokenID.Identifier).ToString();
        ParameterDecl[] parameters = ParameterList();
        Token last = Match(TokenID.SemiColon);

        var efd = new ExternalFunctionDecl(name, parameters);
        efd.SetLocation(first.Start, last.End);
        return efd;
    }

    /// <summary>
    /// Recognizes the declaration of one or many constants.
    /// </summary>
    /// <returns>A <see cref="Ast.Statements.ConstantDecl"/></returns>
    private ConstantDecl ConstantDecl()
    {
        Token first = Match(TokenID.KW_Const);
        var setters = List(ConstantSetter, true, Resources.DuplicatedConstant);
        Token last = Match(TokenID.SemiColon);

        var constDecl = new ConstantDecl(setters);
        constDecl.SetLocation(first.Start, last.End);
        return constDecl;
    }

    /// <summary>
    /// Recognizes the declaration of one or many variables.
    /// </summary>
    /// <returns>A <see cref="Ast.Statements.VariableDecl"/></returns>
    private VariableDecl VariableDecl()
    {
        Token first = Match(TokenID.KW_Var);
        var setters = List(VariableSetter, true, Resources.DuplicatedVariable);
        Token last = Match(TokenID.SemiColon);

        var varDecl = new VariableDecl([..setters]);
        varDecl.SetLocation(first.Start, last.End);
        return varDecl;
    }

    /// <summary>
    /// Recognizes an assignment starting with the <b>let</b> keyword.
    /// </summary>
    /// <returns>An <see cref="Assignment"/></returns>
    private Assignment AssignmentWithLet()
    {
        Token first = Match(TokenID.KW_Let);
        Expression lValue = Reference();
        Match(TokenID.Equal);
        Expression rvalue = RequiredExpression();
        Token last = Match(TokenID.SemiColon);

        var expr = new Assignment(lValue, rvalue);
        expr.SetLocation(first.Start, last.End);
        return expr;
    }

    /// <summary>
    /// Recognizes a block of statements.
    /// </summary>
    /// <param name="asExpression">
    /// Tells if the block is recognized as an expression.
    /// </param>
    /// <returns>A <see cref="Ast.Statements.Block"/></returns>
    private Block Block(bool asExpression = false)
    {
        Token first = Match(TokenID.LeftBrace);

        CurrentFunction.PushBlock(asExpression);
        Statement[] stmts = Asterisk(StatementWithLabels);
        var labels = CurrentFunction.CurrentBlock.ConvertLabels(stmts);
        CurrentFunction.PopBlock();

        Token last = Match(TokenID.RightBrace);

        var block = new Block(stmts) { Labels = labels };
        block.SetLocation(first.Start, last.End);
        return block;
    }

    /// <summary>
    /// Recognizes an if-else statement.
    /// </summary>
    /// <returns>An <see cref="Ast.Statements.IfElse"/></returns>
    private IfElse IfElse()
    {
        Token first = Match(TokenID.KW_If);
        Match(TokenID.LeftParenthesis);
        var cond = RequiredExpression();
        Match(TokenID.RightParenthesis);

        Statement positiveAction = Required(Statement, Resources.StatementRequired);

        Statement negativeAction = null;
        if (TryMatch(TokenID.KW_Else))
        {
            Consume(1);
            negativeAction = Required(Statement, Resources.StatementRequired);
        }

        var ifElse = new IfElse(cond, positiveAction, negativeAction);
        ifElse.SetLocation(first.Start, (negativeAction ?? positiveAction).End);
        return ifElse;
    }

    /// <summary>
    /// Recognizes an switch block.
    /// </summary>
    /// <returns>A <see cref="Ast.Statements.SwitchBlock"/></returns>
    private SwitchBlock SwitchBlock()
    {
        Token first = Match(TokenID.KW_Switch);
        Match(TokenID.LeftParenthesis);
        var expr = RequiredExpression();
        Match(TokenID.RightParenthesis);
        Match(TokenID.LeftBrace);

        List<CaseLabel> cases = [];
        List<Statement> stmtList = [];
        int address = 0, defCase = int.MaxValue;
        Dictionary<string, Label> labels;
        Statement[] stmts;

        CurrentFunction.PushBlock(false);
        ++CurrentFunction.SwitchBlocks;

        while (TryMatch(TokenID.KW_Case))
        {
            CaseLabel caseLabel = CaseLabel(address);

            if (cases.Contains(caseLabel))
                throw new ScriptError(FileName, caseLabel, Resources.DuplicatedCaseLabel);

            cases.Add(caseLabel);
            stmtList.AddRange(stmts = Asterisk(StatementWithLabels));
            address += stmts.Length;
        }

        if (TryMatch(TokenID.KW_Default))
        {
            Consume(1);
            Match(TokenID.Colon);
            defCase = address;
            stmtList.AddRange(Asterisk(StatementWithLabels));
        }

        Token last = Match(TokenID.RightBrace);
        stmts = [.. stmtList];
        labels = CurrentFunction.CurrentBlock.ConvertLabels(stmts);

        --CurrentFunction.SwitchBlocks;
        CurrentFunction.PopBlock();

        if (cases.Count == 0 && defCase == int.MaxValue)
            throw new SyntaxError(FileName, first, Resources.CaseLabelRequired);

        foreach (CaseLabel caseLabel in cases)
            labels.Add(caseLabel.LabelName, caseLabel);

        if (defCase < int.MaxValue)
            labels.Add(Ast.Statements.CaseLabel.DEFAULT_LABEL_NAME, new Label(defCase));

        var switchBlock = new SwitchBlock(expr, [.. cases], defCase, stmts) { Labels = labels };
        switchBlock.SetLocation(first.Start, last.End);
        return switchBlock;
    }

    /// <summary>
    /// Recognizes a for loop.
    /// </summary>
    /// <returns>A <see cref="Ast.Statements.ForLoop"/></returns>
    private ForLoop ForLoop()
    {
        Token first = Match(TokenID.KW_For);
        Match(TokenID.LeftParenthesis);

        Statement[] initializers;
        if (TryMatch(TokenID.KW_Var))
            initializers = [VariableDecl()];
        else
        {
            initializers = List(Expression, false, null);
            Match(TokenID.SemiColon);
        }

        Expression guard = Expression();
        Match(TokenID.SemiColon);
        Expression[] updaters = List(Expression, false, null);
        Match(TokenID.RightParenthesis);

        ++CurrentFunction.Loops;
        var body = Required(Statement, Resources.StatementRequired);
        --CurrentFunction.Loops;

        var forLoop = new ForLoop(initializers, guard, updaters, body);
        forLoop.SetLocation(first.Start, body.End);
        return forLoop;
    }

    /// <summary>
    /// Recognizes a for-each loop.
    /// </summary>
    /// <returns>A <see cref="Ast.Statements.ForEachLoop"/></returns>
    private ForEachLoop ForEachLoop()
    {
        Token first = Match(TokenID.KW_ForEach);
        Match(TokenID.LeftParenthesis);
        string keyName = Ast.Statements.ForEachLoop.DEFAULT_KEY_NAME;
        string valueName = Match(TokenID.Identifier).ToString();

        if (TryMatch(TokenID.Arrow))
        {
            Consume(1);
            keyName = valueName;
            valueName = Match(TokenID.Identifier).ToString();
        }

        Match(TokenID.KW_In);
        var enumerated = RequiredExpression();
        Match(TokenID.RightParenthesis);

        ++CurrentFunction.Loops;
        var body = Required(Statement, Resources.StatementRequired);
        --CurrentFunction.Loops;

        var forEach = new ForEachLoop(keyName, valueName, enumerated, body);
        forEach.SetLocation(first.Start, body.End);
        return forEach;
    }

    /// <summary>
    /// Recognizes a while loop.
    /// </summary>
    /// <returns>A <see cref="Ast.Statements.WhileLoop"/></returns>
    private WhileLoop WhileLoop()
    {
        Token first = Match(TokenID.KW_While);
        Match(TokenID.LeftParenthesis);
        var guard = RequiredExpression();
        Match(TokenID.RightParenthesis);

        ++CurrentFunction.Loops;
        var body = Required(Statement, Resources.StatementRequired);
        --CurrentFunction.Loops;

        var whileLoop = new WhileLoop(guard, body);
        whileLoop.SetLocation(first.Start, body.End);
        return whileLoop;
    }

    /// <summary>
    /// Recognizes a do-while loop.
    /// </summary>
    /// <returns>A <see cref="Ast.Statements.DoLoop"/></returns>
    private DoLoop DoLoop()
    {
        Token first = Match(TokenID.KW_Do);

        ++CurrentFunction.Loops;
        var body = Required(Statement, Resources.StatementRequired);
        --CurrentFunction.Loops;

        Match(TokenID.KW_While);
        Match(TokenID.LeftParenthesis);
        var guard = RequiredExpression();
        Match(TokenID.RightParenthesis);
        Token last = Match(TokenID.SemiColon);

        var doLoop = new DoLoop(guard, body);
        doLoop.SetLocation(first.Start, last.End);
        return doLoop;
    }

    /// <summary>
    /// Recognizes a continue statement.
    /// </summary>
    /// <returns>A <see cref="Ast.Statements.Continue"/></returns>
    private Continue Continue()
    {
        Token first = Match(TokenID.KW_Continue);
        if (CurrentFunction.Loops <= 0)
            throw new SyntaxError(FileName, first, Resources.NoContinueOutOfLoop);

        Token last = Match(TokenID.SemiColon);

        var _continue = new Continue();
        _continue.SetLocation(first.Start, last.End);
        return _continue;
    }

    /// <summary>
    /// Recognizes a break statement.
    /// </summary>
    /// <returns>A <see cref="Ast.Statements.Break"/></returns>
    private Break Break()
    {
        Token first = Match(TokenID.KW_Break);
        if (CurrentFunction.Loops <= 0 && CurrentFunction.SwitchBlocks <= 0)
            throw new SyntaxError(FileName, first, Resources.NoBreakOutOfLoop);

        Token last = Match(TokenID.SemiColon);

        var _break = new Break();
        _break.SetLocation(first.Start, last.End);
        return _break;
    }

    /// <summary>
    /// Recognizes a goto statement.
    /// </summary>
    /// <returns>A <see cref="Ast.Statements.Goto"/></returns>
    private Goto Goto()
    {
        string labelName;
        bool jumpToCaseLabel = false;

        Token first = Match(TokenID.KW_Goto);

        if (TryMatch(TokenID.Identifier))
            labelName = Match(TokenID.Identifier).ToString();
        else if (TryMatch(TokenID.KW_Case))
        {
            Consume(1);
            Token valueToken = MatchAny(TokenID.LT_Boolean, TokenID.LT_Integer, TokenID.LT_String);
            DataItem value = DataItemFactory.CreateDataItem(valueToken.Value);
            labelName = Ast.Statements.CaseLabel.GetLabelName(value);
            jumpToCaseLabel= true;
        }
        else
        {
            Match(TokenID.KW_Default);
            labelName = Ast.Statements.CaseLabel.DEFAULT_LABEL_NAME;
            jumpToCaseLabel = true;
        }

        Token last = Match(TokenID.SemiColon);

        var _goto = new Goto(labelName);
        _goto.SetLocation(first.Start, last.End);

        if (jumpToCaseLabel && CurrentFunction.SwitchBlocks <= 0)
            throw new ScriptError(FileName, _goto, Resources.JumpToCaseLabelOutOfSwitchBlock);

        return _goto;
    }

    /// <summary>
    /// Recognizes a yield statement.
    /// </summary>
    /// <returns>A <see cref="Ast.Statements.Yield"/></returns>
    private Yield Yield()
    {
        Token first = Match(TokenID.KW_Yield);
        if (!(CurrentFunction.IsIterator || CurrentFunction.CurrentBlock.CanYield))
            throw new SyntaxError(FileName, first, Resources.YieldUsedOutOfIterator);

        var expr = RequiredExpression();
        Token last = Match(TokenID.SemiColon);

        var yield = new Yield(expr);
        yield.SetLocation(first.Start, last.End);
        return yield;
    }

    /// <summary>
    /// Recognizes a return statement.
    /// </summary>
    /// <returns><see cref="Return"/></returns>
    private Return Return()
    {
        Token first = Match(TokenID.KW_Return);
        if (CurrentFunction.FinallyBlocks > 0)
            throw new SyntaxError(FileName, first, Resources.CannotReturnFromFinallyBlock);

        Expression expr = Expression();
        if (expr != null)
        {
            if (CurrentFunction.IsMain)
                throw new ScriptError(FileName, expr, Resources.ScriptCannotReturnValue);

            if (CurrentFunction.IsContructor)
                throw new ScriptError(FileName, expr, Resources.ConstructorCantReturnValue);

            if (CurrentFunction.IsIterator)
                throw new ScriptError(FileName, expr, Resources.IteratorCantReturnValue);
        }

        Token last = Match(TokenID.SemiColon);

        var _return = new Return(expr);
        _return.SetLocation(first.Start, last.End);
        return _return;
    }
